--- a/spring-config-server/src/main/resources/bootstrap-1.properties
+++ b/spring-config-server/src/main/resources/bootstrap-1.properties
@@ -4,8 +4,8 @@ eureka.client.serviceUrl.defaultZone=http://admin:admin@localhost:8763/eureka/
 spring.application.name=config-server
 spring.cloud.config.server.git.uri=https://github.com/zg-jack/zg-config-repo
 spring.cloud.config.server.git.search-paths=config-repo
-spring.cloud.config.server.git.username=zg-jack
-spring.cloud.config.server.git.password=zg0001jack
+spring.cloud.config.server.git.username=----
+spring.cloud.config.server.git.password=----
 #本地缓存目录
 spring.cloud.config.server.git.basedir=C:/work/config/tmp
 #强制从GitHub配置中心中拉取配置信息，不走缓存
