--- a/spring-config-server/src/main/resources/bootstrap.yml
+++ b/spring-config-server/src/main/resources/bootstrap.yml
@@ -1,3 +1,5 @@
+server:
+  port: 8005
 spring:
   application:
     name: config-server
@@ -5,14 +7,46 @@ spring:
     config:
       server:
         git:
-          uri:
+          uri: https://github.com/Posiedon-WH/congfig-server
           username: Posiedon-WH
           password: githubmm6436
-          search-paths:
-server:
-  port: 8005
+          #          search-paths:
+          #本地缓存地址
+          basedir: F:/spring/config/tmp
+          #强制从GitHub配置中心中拉取配置信息，不走缓存
+          force-pull: true
+#          default-label: master
+
+  # 刷新配置url  http://localhost:8081/actuator/bus-refresh
+  bus:
+    enabled: true
+    refresh:
+      enabled: true
+    trace:
+      enabled: true
+
+  rabbitmq:
+    host: 192.168.1.106
+    username: admin
+    password: rbmq6436
 eureka:
   client:
     serviceUrl:
       defaultZone: http://admin:admin@localhost:8700/eureka/
 
+#hystrix.stream  (actuator)开放所有的监控接口
+management:
+  endpoints:
+    web:
+      exposure:
+        include: '*'
+#生成秘钥指令
+#keytool -genkeypair -alias config-server -keyalg RSA -keystore config-server.keystore -validity 365
+
+#加密配置 todo Cannot load keys from store
+#encrypt:
+#  key-store:
+#    location: config-server.keystore
+#    alias: config-server
+#    password: 123456
+#    secret: 123456
