--- a/order-client/src/main/resources/bootstrap.yml
+++ b/order-client/src/main/resources/bootstrap.yml
@@ -26,7 +26,8 @@ spring:
     host: 192.168.1.106
     username: admin
     password: rbmq6436
-
+  redis:
+    host: 192.168.1.106
 
 eureka:
   client:
