--- a/store-client/pom.xml
+++ b/store-client/pom.xml
@@ -33,6 +33,11 @@
       <artifactId>spring-cloud-starter-netflix-eureka-client</artifactId>
       <version>2.2.3.RELEASE</version>
     </dependency>
+    <dependency>
+      <groupId>org.springframework.cloud</groupId>
+      <artifactId>spring-cloud-starter-feign</artifactId>
+      <version>1.4.7.RELEASE</version>
+    </dependency>
 
     <dependency>
       <groupId>junit</groupId>
